# otus_cpp

./: .gitignore  README.md
02.hello_world/: hello_world.cpp
03.random_value/: CMakeLists.txt  guess_a_number.cpp  guess_a_number.hpp  high_scores.cpp  high_scores.hpp
04.physics/: Ball.cpp  Ball.hpp  CMakeLists.txt  Color.hpp  Physics.cpp  Point.hpp  World.cpp
05.statistics/: CMakeLists.txt  statistics.cpp  statistics.hpp
06.container/: CMakeLists.txt  array.hpp  container.cpp  list.hpp
07.gtest/: CMakeLists.txt  array.hpp  array_tests.cpp  list.hpp  list_tests.cpp
08.crack/: main.cpp
09.common_words/: CmakeLists.txt  topk_words.cpp
